--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,27 @@
   </head>
   <body>
     <p>Welcome to the chat app!</p>
+
+
+    <script type="text/javascript" src="/socket.io/socket.io.js">
+
+    </script>
+    <script type="text/javascript">
+      var socket = io(); // opening socket io connection
+      // io() function is available to the HTML script since it is preloaded from the script tag just above i.e. socket.io.js
+
+// Client side event based action
+      socket.on('connect', ()=> {
+console.log('Connected to server');
+
+      });
+
+      socket.on('disconnect', ()=> {
+
+        console.log('Disconnected from server');
+        
+      })
+
+    </script>
   </body>
 </html>
