--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <p>Welcome to the chat app!</p>
 
 
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="/JS/index.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/JS/index.js"></script>
   </body>
 </html>
