Minor fixes to get JS to work from Heroku

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/JS/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
